Update styles to fix over stretching image issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,7 @@ figure {
     padding-bottom: 0;
     height: 60px;
     overflow: auto;
+    word-break: break-all;
   }
 }
 
